-----------------------------------------------------------------------------------------
	$Id: ChangeLog,v 1.951 2011-04-16 00:50:52 guru Exp $
-----------------------------------------------------------------------------------------

2011-04-15	pwessel
	* gmt_map.c:		Moved initialization of path resampling step for maps to here.
				This is used by GMT_fix_up_path to resample before plotting.
				Only programs that need to set this via options (e.g., sample1d)
				will do so explicitly.
	* gmt_plot.c:		Safer approach to fill and outline for multi-polygons with holes
				or polar caps: For these cases we always do the fill separately
				then draw the outline separately (if requested).
	* gmntspatial_func.c:	Preliminary implementation of -Ss for splitting polygons that
				straddle the Dateline.

2011-04-14	pwessel
	* *.[ch]:		Ended support for OS/2.  GMT 4 remains an option for OS/2 users.

2011-04-14	jluis
	* gmt_gdalread.c:	Fix situation when reading a subregion via GDAL
	* gmt_customio.c:	---"---

2011-04-14	remko
	* gmt_gdalread.c:	Sets grid registration of pixel registered when data type is Byte.
				We may/will need to update this later.
	* gmt_esri_io.c:	Fixed error in selecting output row when loading a binary subsection.
	* grdview_func.c:	Fixed interpolation errors when resampling intensity to drape grid.

2011-04-12      pwessel
	* configure.ac:		Added check for log2, with macro in gmt_math.h
	
2011-04-12	remko
	* gmt_esri_io.c:	Load GTOPO30 and SRTM30 as pixel registered grids (which they are).
	* gmt_gdalread.[ch]:	Removed C.active from GDALREAD_CTRL. Need was based on misinterpretation.
	* gmt_grdio.c:		Force pixel registration in GMT_read_image_info.
	* gmt_customio.c:	Force pixel registration in GMT_gdal_read_grd_info.
	* gmt_esri_io.c:	Put type flags in newly created "flags" variable in grid header.
	* grdreformat_func.c:	Fixed bug when using -R. Did not select region properly.
	* examples/ex32:	New example, thanks to Stephan Eickschen.